# Arpav-PPCV-backend

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  alembic.ini  dev-log-config.yml  docker-compose.yml  pyproject.toml  staging-log-config.yml
.github/workflows/: ci.yaml  deployment.yaml  vulnerability-scan.yaml
arpav_ppcv/: config.py  database.py  datadownloads.py  exceptions.py  main.py  operations.py  palette.py  utils.py
arpav_ppcv/bootstrapper/: cliapp.py  configurationparameters.py  variables.py
arpav_ppcv/bootstrapper/coverage_configurations/: cdd.py  cdds.py  fd.py  hdds.py  hwdi.py  pr.py  r95ptot.py  snwdays.py  su30.py  tas.py  tasmax.py  tasmin.py  tr.py
arpav_ppcv/cliapp/: app.py  schemas.py
arpav_ppcv/dataset_uncertainty/: cliapp.py  constants.py  operations.py
arpav_ppcv/migrations/: env.py
arpav_ppcv/migrations/versions/: 002385d70ff0_added_internal_value.py  04856adc278f_add_description_italian_and_display_.py  0614edfff467_rename_conf_param_description.py  15447f10da86_initial_migration.py  2c0e4144c2ec_added_municipality_centroid_coords.py  2e38a7decfc3_added_related_time_series_cov_conf.py  37c860e5bc45_added_display_name_for_coverage_.py  (+25 more)
arpav_ppcv/observations_harvester/: cliapp.py  operations.py
arpav_ppcv/operations/: thredds.py
arpav_ppcv/prefect/: cliapp.py
arpav_ppcv/schemas/: base.py  coverages.py  fields.py  models.py  municipalities.py  observations.py
arpav_ppcv/thredds/: crawler.py  models.py  ncss.py  utils.py
arpav_ppcv/webapp/: app.py  dependencies.py  responses.py  routers.py  routes.py  schemas.py
backend/: manage.py
backend/djangoapp/: asgi.py  auth_token.py  celery.py  consumers.py  routing.py  settings.py  urls.py  wsgi.py
backend/djcore/: LICENSE  README.rst  mkdocs.yml  runtests.py  setup.py
backend/padoa/: setup.py
data/: README.md  limits_IT_regions.geojson
data/palettes/: README.md  div-BrBG.pal  div-BuRd2.pal  div-PRGn.pal  div-PiYG.pal  div-PuOr.pal  div-RdBu.pal  div-RdGy.pal  div-RdYlBu.pal  div-RdYlGn.pal  div-Spectral.pal  seq-Blues.pal  seq-BuGn.pal  seq-BuPu.pal  seq-BuYl.pal  seq-GnBu.pal  seq-Greens.pal  seq-Greys.pal  seq-OrRd.pal  seq-Oranges.pal  seq-PuBu.pal  seq-PuBuGn.pal  seq-PuRd.pal  seq-Purples.pal  seq-RdPu.pal  seq-Reds.pal  seq-YlGn.pal  seq-YlGnBu.pal  seq-YlOrBr.pal  seq-YlOrRd.pal
deployments/staging/: hooks.yaml  webhook-hooks.yaml  webhook.service
docker/: Dockerfile  compose.dev.yaml  compose.staging.yaml  compose.yaml
docker/backend/: docker-entrypoint.sh  project_requirements.txt
docker/basemap/: Dockerfile  docker-compose.yml
docker/martin/: config.yaml
docker/nginx/: default.conf  nginx.conf
docker/plausible/: clickhouse-config.xml
docker/prefect/: profiles.toml
docker/pygeoapi/: config.yaml
docker/traefik/: dev-config.toml  staging-config.toml
docs/decisions/: 0001-use-poetry-for-python-dependency-management.md  0002-use-ruff-for-linting-and-formatting.md
proxy/: Dockerfile
scripts/: deploy-staging.sh
tests/: conftest.py  test_cliapp.py  test_database.py  test_observations_harvester_app.py  test_observations_harvester_operations.py  test_operations.py  test_padoa_forecastattributes_views.py  test_padoa_places_views.py  test_padoa_thredds_views.py  test_palette.py  test_prefect_flows_observations.py  test_webapp_v2_routers_coverages.py  test_webapp_v2_routers_observations.py
tests/ci/: main.py
tests/loadtests/: locustfile.py
tests/notebooks/: coverage-download-grid.ipynb  generic.ipynb  num_stations_research.ipynb  observation-time-series.ipynb  palettes.ipynb  timeseries-observations-demo.ipynb  timeseries-related-demo.ipynb  timeseries-smoothing-demo.ipynb  timeseries-uncertainty-demo.ipynb  timeseries.ipynb  timeseries_via_api.ipynb
thredds_helper/: index.js  package.json
(+128 files in other folders)
